PHASE 1, 2, 4 완료